--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,7 @@ body {
 .iconButton {
   @apply text-xl cursor-pointer hover:bg-black p-1 transition hover:scale-110 rounded-full;
 }
+
+.defaultButton {
+  @apply px-5 py-2 bg-black border-neutral-700 border-1 rounded-xl hover:bg-neutral-600 transition cursor-pointer flex items-center gap-2;
+}
